Finally fixed missing background colour

--- a/wp-content/themes/roots/assets/css/less/app.less
+++ b/wp-content/themes/roots/assets/css/less/app.less
@@ -19,7 +19,11 @@
    Base
    ========================================================================== */
 
-body { }
+body { 
+
+background: url(../Design%20Artefacts/transBG.png), fade(spin(@sdMustard, -40), 75%);
+
+}
 
 
 
